# demo-nrf52-hrs

./: .gitignore  .lager  CMakeLists.txt  README.md  docker-sync.yml
.circleci/: config.yml
.github/workflows/: build_and_test.yml
_circleci/: config.yml
examples/ble_peripheral/ble_app_hrs/: CMakeLists.txt
examples/ble_peripheral/ble_app_hrs/pca10056/s140/armgcc/_build/: nrf52840_xxaa.hex  nrf52840_xxaa.in  nrf52840_xxaa.map  nrf52840_xxaa.out
examples/ble_peripheral/ble_app_hrs/pca10056/s140/armgcc/_build/nrf52840_xxaa/: SEGGER_RTT.c.d  SEGGER_RTT_printf.c.d  aes.c.d  app_button.c.d  app_error.c.d  app_error_handler_gcc.c.d  app_error_weak.c.d  app_scheduler.c.d  app_timer2.c.d  app_util_platform.c.d  auth_status_tracker.c.d  ble_advdata.c.d  ble_advertising.c.d  ble_bas.c.d  ble_conn_params.c.d  ble_conn_state.c.d  ble_dis.c.d  ble_hrs.c.d  ble_srv_common.c.d  boards.c.d  bsp.c.d  bsp_btn_ble.c.d  cc310_backend_aes.c.d  cc310_backend_aes_aead.c.d  cc310_backend_chacha_poly_aead.c.d  cc310_backend_ecc.c.d  cc310_backend_ecdh.c.d  cc310_backend_ecdsa.c.d  cc310_backend_eddsa.c.d  cc310_backend_hash.c.d  cc310_backend_hmac.c.d  cc310_backend_init.c.d  cc310_backend_mutex.c.d  cc310_backend_rng.c.d  cc310_backend_shared.c.d  crc16.c.d  ctr_drbg.c.d  drv_rtc.c.d  fds.c.d  gatt_cache_manager.c.d  (+75 more)
tests/: ble_gatts_test.py  ble_read_write_notify_test.py  ble_scan_test.py  main.py
